# detect-wsl

./: .gitignore  LICENSE  README.md  detect_wsl.py  pyproject.toml
detect_wsl/: __init__.py  __main__.py  detect_wsl.py  win32_process_parents.py
test/: test_py_versions.sh
